styles.scss
@import "./assets/styles/__typography"; 
@import "./assets/styles/__animations";


* {
  margin: 0; 
  padding: 0; 
  box-sizing: border-box; 
  color: $primary-color; 
}


a {
  text-decoration: none;
}

// Set up scroll snapping behaviour - we want to snap to about page, and no more snapping after that. 

html {
  overflow-y: scroll; 
}

main {
  // AOS library adds whitespace for some reason on mobile. 
  // This line fixes it.
  // If it breaks again add this to body. It will break scroll snap - its a bug. You have to sacrifice one or the other.  
  overflow-x: hidden;
}


// Rest of page refers to everything that isn't the landing page.

.rest-of-page {
  background: linear-gradient(#647AAF, #092659);
  max-width: 100%;
  background-repeat: no-repeat; 
  background-size: cover; 
}
// Fixed Elements

// Fixed Element - Socials 

.fixed_elements__socials {
  position: fixed;
  bottom: 0;
  left: 50px; 
  display: flex; 
  flex-direction: column;
  align-items: center;
  z-index: 2;  
  &__line {
    width: 5px; 
    height: 20vh;
    background: white;
    margin-top: 10px; 
  } 
  &__links {
    font-size: 50px;
    margin-top: 10px;  
  }  
}

// Fixed Element - Logo 

.fixed_elements__logo-img {  
  background: linear-gradient(#0B4284, #0B4284) padding-box, linear-gradient(#1178c3, #afb2b5) border-box; 
  border: 10px solid transparent; 
  padding-top: 15px; 
  padding-bottom: 20px;  
  margin-left: 10px;
  margin-top: 10px;   
  border-radius: 50%;
  overflow: hidden;
  position: fixed;
  z-index: 20;    
}

// Fixed Element - Hamburger Menu

.fixed_elements__hamburger-menu {
  visibility: hidden;
  margin: 0px; 
  padding: 0px;
  position: fixed;  
  font-size: 50px; 
  left: 10px;
  top: 10px; 
  z-index: 50;   
}

// Fixed Element - Navbar

.nav { 
  display: flex; 
  justify-content: flex-end;
  align-items: center; 
  font-family: $secondary-font;
  position: fixed; 
  width: 100%;  
  z-index: 50;       
  &__list-master {
    display: flex; 
    justify-content: flex-end; 
    column-gap: 10px;  
    align-self: flex-start; 
  }
  
  &__list-items {
    font-size: 30px; 
    list-style-type: none; 
    margin-right: 20px; 
    font-weight: normal;    
  }
  &__list-items-number {
    color: #64FFDA; 
  }
}

// Landing Section 

#particles-js-landing {
  position: absolute; 
  width: 100%; 
  height: 100vh; 
}
.landing {
  max-width: 100%;
  width:100%; 
  height: 100vh;  
  display: flex; 
  flex-direction: column; 
  justify-content: space-around; 
  align-items: center; 
  background-image: url(./assets/images/background-space-pic.jfif);
  background-repeat: no-repeat; 
  background-size: cover; 
  // border-bottom: 10px solid #6177AC;
  &__message {
    z-index: 2; 
    background: linear-gradient(rgba(120, 149, 198, 0.15), rgba(14, 21, 48, 0.15));  
    height: auto;
    width: 70vw;   
    border: 1px solid rgba(103, 128, 159, 0.15);
    font-size: 50px;
    margin-top: 150px; 
    border-radius: 25px; 
    font-family: $secondary-font;
    display: grid; 
    grid-template-columns: auto auto;
    grid-template-rows: auto auto auto auto;
    column-gap: 0;
    row-gap: 0; 
    box-shadow: 10px 10px 5px 0px rgba(0,0,0,0.75);
    padding-top: 20px;
    animation-name: rainbowBorder;
    animation-duration: 8s; 
    animation-timing-function: linear;
    animation-iteration-count: infinite;
    animation-delay: 4s;
    // These next few lines place our landing message on the grid exactly as needed. 

    &__line-1 {
    grid-column-start: 1;
  }

    &__line-2 {
      grid-column-start: 2;
      grid-row-start: 2;
      color: #29b6f6;   
    }

    &__line-3 {
      grid-column-start: 2;
      grid-row-start: 3;
      color: #9CCC65;   
    }

    &__line-4 {
      grid-column-start: 2;
      grid-row-start: 4;
      color: #EF5350;   
    }

    &__line-5 {
      grid-column-start: 1;
      grid-row-start: 5;  
    }

    &__line-6 {
      grid-column-start: 1; 
      grid-row-start: 6; 
    }

    &__line__span1 {
      color: #29b6f6;
      display: inline-block; 
    }

    &__line__span2 {
      animation-name: fade-out; 
      animation-duration: 1.5s;
      animation-iteration-count: infinite;
      animation-timing-function: linear;
    }     
  }
  &__chevron {
    font-size: 120px; 
    justify-self: flex-end;
    align-self: center; 
    z-index: 2; 
  }
}

// About Section 
#particles-js-about { 
  position: absolute;
  width: 100%;    
}
/* ... */

